[project]
name = "codex-bridge-mcp"
version = "0.1.0"
description = "MCP server that exposes OpenAI Codex CLI session history to Claude Code and other MCP clients"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sourav Mukherjee" }]
keywords = ["mcp", "codex", "claude-code", "openai", "bridge", "session-history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/Urus1201/codex-bridge-mcp"
Issues = "https://github.com/Urus1201/codex-bridge-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
